--- a/src/features/auth/ui/LoginForm.module.scss
+++ b/src/features/auth/ui/LoginForm.module.scss
@@ -3,7 +3,7 @@
   height: 100%;
   max-width: 527px;
   max-height: 716px;
-  background: #ffffff;
+  background: linear-gradient(to bottom, #ededed 0%, #ffffff 100%);
   padding: 24px;
   border-radius: 34px;
   box-shadow:
@@ -18,6 +18,12 @@
   display: flex;
   justify-content: center;
   margin-bottom: 12px;
+}
+
+.logoImage {
+  width: 68px;
+  height: 74px;
+  display: block;
 }
 
 .title {
@@ -73,6 +79,12 @@
   display: block;
 }
 
+.inputIcon {
+  width: 24px;
+  height: 24px;
+  display: block;
+}
+
 :global(.ant-input-affix-wrapper).inputControl :global(.ant-input) {
   line-height: 1.2;
 }
@@ -92,4 +104,48 @@
 .submitButton:active {
   background-color: #242edb;
   border-color: #242edb;
+}
+
+.rememberRow {
+  padding-left: 40px;
+}
+
+.divider {
+  position: relative;
+  margin: 16px auto;
+  text-align: center;
+  color: #ebebeb;
+  font-size: 16px;
+  width: 100%;
+  max-width: 399px;
+}
+
+.divider::before,
+.divider::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 40%;
+  height: 1px;
+  background-color: #ebebeb;
+}
+
+.divider::before {
+  left: 0;
+}
+
+.divider::after {
+  right: 0;
+}
+
+.signup {
+  text-align: center;
+  margin: 8px 0 0 0;
+  font-size: 18px;
+}
+
+.signupLink {
+  color: #0000ee;
+  text-decoration: underline;
+  font-size: 18px;
 }
