--- a/src/features/auth/ui/LoginForm.module.scss
+++ b/src/features/auth/ui/LoginForm.module.scss
@@ -1,17 +1,36 @@
 .form {
+  position: relative;
   width: 100%;
   height: 100%;
   max-width: 527px;
   max-height: 716px;
-  background: linear-gradient(to bottom, #ededed 0%, #ffffff 100%);
+  background: linear-gradient(
+    to bottom,
+    rgba(243, 243, 243, 0.945) 0%,
+    #ffffff 100%
+  );
   padding: 24px;
   border-radius: 34px;
   box-shadow:
-    0 24px 32px 0 rgba(0, 0, 0, 0.4),
-    0 1px 0 rgba(255, 255, 255, 0.9) inset,
-    0 0 0 1px rgba(255, 255, 255, 0.6),
-    0 14px 24px rgba(0, 0, 0, 0.12);
+    0 18px 24px -12px rgba(0, 0, 0, 0.16);
   font-family: "Inter", sans-serif;
+}
+
+.form::before {
+  content: "";
+  position: absolute;
+  top: -6px;
+  left: -6px;
+  right: -6px;
+  bottom: 0;
+  border-radius: 40px;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 0.6) 60%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  z-index: -1;
 }
 
 .logo {
