--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -6,7 +6,7 @@
   height: 100%;
 }
 
-:global(body) {
+.body {
   margin: 0;
   min-height: 100%;
   font-family: "Inter", "Segoe UI", Arial, sans-serif;
